--- a/styles/styles.css
+++ b/styles/styles.css
@@ -54,7 +54,7 @@ aside img {
     display: flex;
     align-items: center;
     gap: 15px;
-    max-width: auto;
+    max-width: 1000px;
     margin: 4rem;
     border: 1px solid rgb(0, 0, 0 / 0.2);
     padding: 10px;
