--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, sans-serif;
-    line-height: 1.6
+    line-height: 1.6;
+
 }
 
 nav {
@@ -23,6 +24,7 @@ nav a {
     color: black;
     display: block;
     padding: 20px;
+    text-decoration: none;
 }
 
 h1 {
@@ -52,24 +54,24 @@ aside img {
 
 .main {
     display: flex;
-    align-items: center;
+    text-align: center;
     gap: 15px;
     max-width: 1000px;
     margin: 4rem;
     border: 1px solid rgb(0, 0, 0 / 0.2);
-    padding: 10px;
+    padding: 4rem;
     background-color: lightcyan;
     color: black
 }
 
 .aside {
     display: flex;
-    align-items: center;
+    text-align: center;
     gap: 15px;
-    width: auto;
+    max-width: 1000px;
     margin: 4rem;
     border: 1px solid rgb(0, 0, 0 / 0.2);
-    padding: 10px;
+    padding: 4rem;
     background-color: lightcyan;
     color: black
 }
