--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 :root {
-    --nav-background-color: lightcyan;
+    --nav-background-color: lightgoldenrodyellow;
 }
 
 body {
@@ -64,7 +64,7 @@ aside img {
     margin: 4rem;
     border: 1px solid rgb(0, 0, 0 / 0.2);
     padding: 4rem;
-    background-color: lightcyan;
+    background-color: var(--nav-background-color);
     color: black
 }
 
@@ -76,7 +76,7 @@ aside img {
     margin: 4rem;
     border: 1px solid rgb(0, 0, 0 / 0.2);
     padding: 4rem;
-    background-color: lightcyan;
+    background-color: var(--nav-background-color);
     color: black
 }
 
