--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -89,6 +89,11 @@ nav a:hover {
     color: var(--surface-color);
 }
 
+.hero article p {
+    margin: 16px;
+    padding: 8px;
+}
+
 .hero article img {
     float: right;
     width: 125px;
